// Interview session v2 — creation, AI preparation, and text conversation
// Authoritative migrations: 002-interview-sessions.sql through 006-simplify-interview-report.sql

Enum interview_session_status {
  PREPARING
  READY
  PREPARATION_FAILED
  IN_PROGRESS
  SCORING
  COMPLETED
  SCORING_FAILED
  CANCELLED
  EXPIRED
}

Enum interviewer_style {
  FRIENDLY
  PROFESSIONAL
  CHALLENGING
}

Enum interview_focus_priority {
  HIGH
  MEDIUM
  LOW
}

Enum interview_evidence_status {
  NOT_EXPLORED
  PARTIAL
  SUFFICIENT
}

Enum interview_transition_actor {
  USER
  SYSTEM
  SCHEDULER
}

Enum interview_turn_role {
  INTERVIEWER
  CANDIDATE
}

Enum interview_turn_action {
  OPENING
  EXPLORE
  FOLLOW_UP
  HANDLE_REQUEST
  CLOSE
}

Enum candidate_intent {
  ANSWER
  REQUEST_REPEAT
  REQUEST_CLARIFICATION
  REQUEST_TIME
  ASK_INTERVIEWER
  CANNOT_ANSWER
  DECLINE_OR_SKIP
  CORRECT_PREVIOUS_ANSWER
  REQUEST_END
  SOCIAL_OR_META
  OFF_TOPIC
  INAPPROPRIATE
  OTHER
}

Enum interview_turn_processing_status {
  PROCESSING
  COMPLETED
  FAILED
}

Enum interview_end_reason {
  AI_COMPLETED
  TIME_EXPIRED
  CANDIDATE_FINISHED
  SYSTEM_TERMINATED
}

Table interview_sessions {
  id                        bigint                   [pk, increment]
  user_id                   bigint                   [not null]
  template_id               bigint                   [not null]
  profile_id                bigint                   [not null]
  idempotency_key           varchar(100)             [not null]
  template_title_snapshot   varchar(200)             [not null]
  profile_name_snapshot     varchar(150)             [not null]
  status                    interview_session_status [not null, default: 'PREPARING']
  language_code             varchar(10)              [not null]
  duration_minutes          int                      [not null]
  interviewer_style         interviewer_style        [not null]
  template_snapshot_json    json                     [not null]
  profile_snapshot_json     json                     [not null]
  job_context_summary       text
  candidate_context_summary text
  opening_message           text
  conversation_summary      text
  current_turn_index        int                      [not null, default: 0]
  preparation_error_code    varchar(80)
  preparation_error_message text
  plan_schema_version       varchar(20)
  plan_model_name           varchar(100)
  plan_prompt_version       varchar(20)
  preparation_started_at    timestamp
  prepared_at               timestamp
  started_at                timestamp
  deadline_at               timestamp
  last_activity_at          timestamp
  end_reason                interview_end_reason
  ended_at                  timestamp
  scoring_started_at        timestamp
  scoring_error_code        varchar(80)
  scoring_error_message     text
  completed_at              timestamp
  version                   bigint                   [not null, default: 0]
  created_at                timestamp                [not null]
  updated_at                timestamp                [not null]

  indexes {
    (user_id, idempotency_key) [unique]
    (user_id, status)
    (user_id, created_at)
    deadline_at
  }

  Note: 'FKs preserve provenance; JSON snapshots are the immutable input used by AI.'
}

Table interview_focus_areas {
  id               bigint                    [pk, increment]
  session_id       bigint                    [not null]
  code             varchar(50)               [not null]
  name             varchar(150)              [not null]
  description      text
  priority         interview_focus_priority  [not null]
  reason           text                      [not null]
  planned_seconds  int                       [not null]
  evidence_status  interview_evidence_status [not null, default: 'NOT_EXPLORED']
  evidence_summary text
  display_order    smallint                  [not null]
  created_at       timestamp                 [not null]
  updated_at       timestamp                 [not null]

  indexes {
    (session_id, code) [unique]
    (session_id, display_order)
  }

  Note: 'Flexible interview objectives; this is deliberately not a question list.'
}

Table interview_session_transitions {
  id          bigint                     [pk, increment]
  session_id  bigint                     [not null]
  from_status interview_session_status
  to_status   interview_session_status   [not null]
  reason      varchar(255)
  actor       interview_transition_actor [not null]
  occurred_at timestamp                  [not null]

  indexes {
    (session_id, occurred_at)
  }
}

Table interview_turns {
  id                    bigint                           [pk, increment]
  session_id            bigint                           [not null]
  reply_to_turn_id      bigint
  turn_index            int                              [not null]
  role                  interview_turn_role              [not null]
  content_text          text                             [not null]
  candidate_intent      candidate_intent
  action                interview_turn_action
  focus_area_code       varchar(50)
  idempotency_key       varchar(100)
  processing_status     interview_turn_processing_status
  processing_started_at timestamp
  processing_error_code varchar(80)
  created_at            timestamp                        [not null]

  indexes {
    (session_id, turn_index) [unique]
    (session_id, idempotency_key) [unique]
    (session_id, created_at)
    reply_to_turn_id [unique]
  }

  Note: 'Every message is durable. Candidate processing state makes AI retries idempotent.'
}

Table interview_assessments {
  id                     bigint                          [pk, increment]
  session_id             bigint                          [not null, unique]
  technical_score        decimal(5,2)
  communication_score    decimal(5,2)
  overall_score          decimal(5,2)
  coverage_percentage    decimal(5,2)                    [not null]
  overall_summary        text                            [not null]
  technical_feedback     text                            [not null]
  recommendations_json   json                            [not null]
  communication_feedback text                            [not null]
  schema_version         varchar(20)                     [not null]
  model_name             varchar(100)                    [not null]
  prompt_version         varchar(20)                     [not null]
  created_at             timestamp                       [not null]
}

Table interview_focus_area_results {
  id                       bigint                          [pk, increment]
  assessment_id            bigint                          [not null]
  focus_area_id            bigint                          [not null]
  score                    decimal(5,2)
  evidence_status          interview_evidence_status       [not null]
  evidence_turn_ids_json   json                            [not null]

  indexes {
    (assessment_id, focus_area_id) [unique]
    assessment_id
  }
}

Ref: interview_sessions.user_id                   > user_accounts.id       [delete: restrict]
Ref: interview_sessions.template_id               > interview_templates.id [delete: restrict]
Ref: interview_sessions.profile_id                > candidate_profiles.id  [delete: restrict]
Ref: interview_focus_areas.session_id             > interview_sessions.id  [delete: cascade]
Ref: interview_session_transitions.session_id     > interview_sessions.id  [delete: cascade]
Ref: interview_turns.session_id                   > interview_sessions.id  [delete: cascade]
Ref: interview_turns.reply_to_turn_id             > interview_turns.id     [delete: set null]
Ref: interview_assessments.session_id             - interview_sessions.id  [delete: cascade]
Ref: interview_focus_area_results.assessment_id   > interview_assessments.id [delete: cascade]
Ref: interview_focus_area_results.focus_area_id   > interview_focus_areas.id [delete: cascade]
